--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday2Go</title>
     <link rel="stylesheet" href="./Assets/CSS/index.css">
+    <link rel="shortcut icon" href="./Assets/Images/Favicon.png" type="image/x-icon">
 </head>
 <body>
 
-
+<div class="navbar">
+    <nav>
+        <a href=""><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Holiday_Inn_Logo.svg/1200px-Holiday_Inn_Logo.svg.png"></a>
+        <a href=""><li>ONE</li></a>
+        <a href=""><li>TWO</li></a>
+        <a href=""><li>THREE</li></a>
+        <a href=""><li>FOUR</li></a>
+    </nav>
+</div>
     
     <script src="./Assets/JS/index.js"></script>
 </body>
