--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holiday2Go</title>
+    <title>Holiday2Go | Home</title>
     <link rel="stylesheet" href="./Assets/CSS/index.css">
-    <link rel="shortcut icon" href="./Assets/Images/Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/Images/Favicon.ico" width="" type="image/x-icon">
 </head>
-<body>
+<body id="dragless">
 
-<div class="navbar">
-    <nav>
-        <a href=""><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Holiday_Inn_Logo.svg/1200px-Holiday_Inn_Logo.svg.png"></a>
-        <a href=""><li>ONE</li></a>
-        <a href=""><li>TWO</li></a>
-        <a href=""><li>THREE</li></a>
-        <a href=""><li>FOUR</li></a>
-    </nav>
-</div>
-    
-    <script src="./Assets/JS/index.js"></script>
+    <nav class="navbar">
+        <div class="logo">
+          <img src="./Assets/Images/Favicon.png" alt="Logo">
+        </div>
+        <div class="links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Contact</a>
+        </div>
+      </nav>
+
+<script src="./Assets/JS/index.js"></script>
 </body>
 </html>
