--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         </div>
       </nav>
 
+
+      <section class="hero">
+        <div class="hero-content">
+          <h1>Holiday2Go</h1>
+          <p>We are dedicated to providing you with the best deals and services.</p>
+          <a href="#" class="cta-button">Learn More</a>
+        </div>
+      </section>
+
+      
 <script src="./Assets/JS/index.js"></script>
 </body>
 </html>
