--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="hero-content">
           <h1>Holiday2Go</h1>
           <p>We are dedicated to providing you with the best deals and services.</p>
+          <button>Learn More</button>
         </div>
       </section>
 
