changed urls to match personal github storeage

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Holiday2Go | Home</title>
     <link rel="stylesheet" href="./Assets/CSS/index.css">
     
-    <link rel="shortcut icon" href="./Assets/Images/Favicon.ico" width="" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.ico?raw=true" width="" type="image/x-icon">
 </head>
 <body id="dragless">
 
     <nav class="navbar">
         <a href="index.html"><div class="logo">
-          <img src="./Assets/Images/Favicon.png" alt="Logo">
+          <img src="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.png?raw=true" alt="Logo">
         </div>
         <div class="links">
           <a href="index.html">Home</a>
