--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday2Go | Home</title>
     <link rel="stylesheet" href="./Assets/CSS/index.css">
-    
+    <link rel=”stylesheet” href=”htpps://pyscript.net/alpha/pyscript.css” />    
     <link rel="shortcut icon" href="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.ico?raw=true" width="" type="image/x-icon">
 </head>
 <body id="dragless">
