--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <br>
 
       <section id="more-info" class="about-section">
-        <img src="https://static.vecteezy.com/system/resources/previews/012/607/985/original/best-deal-banner-ribbon-megaphone-icon-flat-design-illustration-on-white-background-vector.jpg" alt="About Image" class="about-image">
+        <img src="https://img.freepik.com/premium-vector/summer-sale-design-with-with-stage-podium-sunshade-beach-ball-tropical-sandy-island_1314-3395.jpg  " alt="About Image" class="about-image">
         <div class="about-text">
           <h2>Our Promise </h2>
           <p>Holiday2Go assures you to a comfortable bookings procedure.<br> We will help you get outstanding deals for flights and help plan your holiday with you.</p>
