added span in heading

--- a/index.html
+++ b/index.html
@@ -26,21 +26,14 @@
 
       <section class="main">
         <div class="main-content">
-          <h1>Holiday2Go</h1>
+          <h1>Holiday<span id="num">2</span>Go</h1>
           <p>We are dedicated to providing you with the best deals and services.</p>
           <a href="#more-info"><button>Learn More</button></a>
         </div>
       </section>
       <br>
 
-      <section id="more-info" class="about-section">
-        <img src="https://img.freepik.com/premium-vector/summer-sale-design-with-with-stage-podium-sunshade-beach-ball-tropical-sandy-island_1314-3395.jpg  " alt="About Image" class="about-image">
-        <div class="about-text">
-          <h2>Our Promise </h2>
-          <p>Holiday2Go assures you to a comfortable bookings procedure.<br> We will help you get outstanding deals for flights and help plan your holiday with you.</p>
-        </div>
-      </section>
-      
+
 
 
       
