--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <section class="main">
         <div class="main-content">
-          <h1>Holiday<span id="num">2</span>Go</h1>
+          <h1>Holiday<span id="">2</span>Go</h1>
           <p>We are dedicated to providing you with the best deals and services.</p>
           <a href="#more-info"><button>Learn More</button></a>
         </div>
