--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 
       <div class="image-row">
-        <img src="https://picsum.photos/500" alt="Image 1">
-        <img src="https://picsum.photos/500" alt="Image 2">
-        <img src="https://picsum.photos/500" alt="Image 3">
+        <img src="" alt="Image 1">
+        <img src="" alt="Image 2">
+        <img src="" alt="Image 3">
       </div>
     
       
