--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 
       <div class="image-row">
-        <img src="" alt="Image 1">
-        <img src="" alt="Image 2">
-        <img src="" alt="Image 3">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/tajmahal.png" alt="Image 1">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/bigben.jpg" alt="Image 2">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/js.png" alt="Image 3">
       </div>
     
       
