smooth scroll on button click

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-      <div class="image-row">
+      <div id="more-info" class="image-row">
         <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/tajmahal.png" alt="Image 1">
         <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/bigben.jpg" alt="Image 2">
         <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/js.png" alt="Image 3">
