--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
         <div class="links">
           <a href="index.html">Home</a>
-          <a href="#About">About</a>
-          <a href="#Services">Services</a>
+          <a href="#more-info">About</a>
+          <a href="bookings.html">Bookings</a>
           <a href="mailto:ahmeddanial324@gmail.com">Contact</a>
         </div>
       </nav>
@@ -36,9 +36,9 @@
 
 
       <div id="more-info" class="image-row">
-        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/tajmahal.png" alt="Image 1">
-        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/bigben.jpg" alt="Image 2">
-        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/js.png" alt="Image 3">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/tajmahal.png" alt="TM">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/bigben.jpg" alt="BB">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/js.png" alt="JC">
       </div>
     
       
