--- a/bookings.html
+++ b/bookings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday2Go | Bookings</title>
     <link rel="stylesheet" href="./Assets/CSS/bookings.css">
+    <link rel="shortcut icon" href="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.png?raw=true" type="image/x-icon">
 </head>
 <body id="dragless" class="fade-in">
     
@@ -20,5 +21,20 @@
           <a href="mailto:ahmeddanial324@gmail.com">Contact</a>
         </div>
       </nav>
+
+
+
+
+
+      <footer>
+        <p>&copy; 2023 Holiday2Go. All rights reserved.</p>
+      </footer>
+      
+
+
+
+
+
+
 </body>
 </html>
