--- a/bookings.html
+++ b/bookings.html
@@ -15,9 +15,9 @@
           <img src="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.png?raw=true" alt="Logo">
         </div>
         <div class="links">
-          <a href="index.html">Home</a>
-          <a href="#more-info">About</a>
-          <a href="bookings.html">Bookings</a>
+          <a href="https://holiday2go.netlify.app/">Home</a>
+          <a href="https://holiday2go.netlify.app/#more-info">About</a>
+          <a href="https://holiday2go.netlify.app/bookings">Bookings</a>
           <a href="mailto:ahmeddanial324@gmail.com">Contact</a>
         </div>
       </nav>
