--- a/bookings.html
+++ b/bookings.html
@@ -10,6 +10,8 @@
 <body id="dragless" class="fade-in">
     
 
+  <!-- The below code block creates a simple navbar with text showing accordingly as Home/About/Bookings/Contact after clickin-->
+
     <nav class="navbar">
         <a href="index.html"><div class="logo">
           <img src="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.png?raw=true" alt="Logo">
