--- a/bookings.html
+++ b/bookings.html
@@ -10,19 +10,14 @@
 <body id="dragless" class="fade-in">
     
 
-  <!-- The below code block creates a simple navbar with text showing accordingly as Home/About/Bookings/Contact after clickin-->
 
-    <nav class="navbar">
-        <a href="index.html"><div class="logo">
-          <img src="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.png?raw=true" alt="Logo">
-        </div>
-        <div class="links">
-          <a href="https://holiday2go.netlify.app/">Home</a>
-          <a href="https://holiday2go.netlify.app/#more-info">About</a>
-          <a href="https://holiday2go.netlify.app/bookings">Bookings</a>
-          <a href="mailto:ahmeddanial324@gmail.com">Contact</a>
-        </div>
-      </nav>
+  <ul>
+    <li><a href="https://holiday2go.netlify.app">Home</a></li>
+    <li><a href="#more-info">About</a></li>
+    <li><a class="active" href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
+    <li style="float:right"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
+  </ul>
+
       <br><br>
 
 
