fixed navbar redirects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
 
       <footer>
-        <p>&copy; 2023 Holiday2Go. All rights reserved.</p>
+        <p>&copy; 2023 Holiday<span id="num">2</span>Go All rights reserved.</p>
       </footer>
       
 
