--- a/bookings.html
+++ b/bookings.html
@@ -13,7 +13,7 @@
 
   <ul>
     <li><a href="https://holiday2go.netlify.app">Home</a></li>
-    <li><a href="#more-info">About</a></li>
+    <li><a href="https://holiday2go.netlify.app#more-info">About</a></li>
     <li><a class="active" href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
     <li style="float:right"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
   </ul>
