--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
       
       <div class="image-row">
-        <img src="" alt="TM">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/sol.png" alt="sl">
         <img src="" alt="TM">
         <img src="" alt="TM">
       </div>
