--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       
       <div class="image-row">
         <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/sol.png" alt="sl">
-        <img src="" alt="TM">
+        <img src="https://raw.githubusercontent.com/unofficialdxnny/Holiday2Go/main/Assets/Images/sh.png" alt="sh">
         <img src="" alt="TM">
       </div>
 
