--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a class="active" href="https://holiday2go.netlify.app">Home</a></li>
     <li><a href="#more-info">About</a></li>
     <li><a href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
-    <li style="float:right"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
+    <li class="contact"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
   </ul>
 
 
