--- a/bookings.html
+++ b/bookings.html
@@ -11,12 +11,14 @@
     
 
 
-  <ul>
-    <li><a href="https://holiday2go.netlify.app">Home</a></li>
-    <li><a href="https://holiday2go.netlify.app#more-info">About</a></li>
-    <li><a class="active" href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
-    <li style="float:right"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
-  </ul>
+  <div id="main">
+    <ul>
+      <li><a class="active" href="https://holiday2go.netlify.app">Home</a></li>
+      <li><a href="#more-info">About</a></li>
+      <li><a href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
+      <li class="contact"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
+    </ul>
+    </div>
 
       <br><br>
 
@@ -24,8 +26,9 @@
 
 
 
+
       <footer>
-        <p>&copy; 2023 Holiday2Go. All rights reserved.</p>
+        <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
       </footer>
       
 
