--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 <body id="dragless" class="fade-in">
 
-
+<div id="main">
   <ul>
     <li><a class="active" href="https://holiday2go.netlify.app">Home</a></li>
     <li><a href="#more-info">About</a></li>
     <li><a href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
     <li class="contact"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
   </ul>
+  </div>
 
 
 
@@ -49,7 +50,7 @@
     
 
       <footer>
-        <p>&copy; 2023 Holiday<span id="num">2</span>Go All rights reserved.</p>
+        <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
       </footer>
       
 
