added image for header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 
   <div class="header">
-    
+    <h1 class="header-heading">Holiday<span id=num>2</span>Go</h1>
   </div>
 
 <script src="./Assets/JS/index.js"></script>
