--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 
   <div class="header">
     <h1 class="header-heading">Holiday<span id=num>2</span>Go</h1>
+    <p1 class="header-para">Holiday<span id=num>2</span>Go is the perfect place to plan and manage your holiday!<br>
+      Easily book flights, hotels or plan the todo's on thecenrtain daays<br>
+    </p1>
+    
   </div>
+
+
 
 <script src="./Assets/JS/index.js"></script>
 </body>
