made a mini image gallery

--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
         <br>
   
   
+  <div class="gallery">
+    <div class="imgrow"><img src="https://img.freepik.com/premium-photo/india-taj-mahal-complex-beautiful-day-view_400112-330.jpg?w=2000" width="600" height="400" alt=""></div>
+    <div class="imgrow"><img src="https://img.freepik.com/premium-photo/india-taj-mahal-complex-beautiful-day-view_400112-330.jpg?w=2000" width="600" height="400" alt=""></div>
+    <div class="imgrow"><img src="https://img.freepik.com/premium-photo/india-taj-mahal-complex-beautiful-day-view_400112-330.jpg?w=2000" width="600" height="400" alt=""></div>
+  </div>
   
   
-  
-        <footer>
-          <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
-        </footer>
+  <footer>
+    <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
+  </footer>
   
   
   
