added new images and animation

--- a/index.html
+++ b/index.html
@@ -27,18 +27,23 @@
           <div class="main-content">
             <h1>Holiday<span id="num">2</span>Go</h1>
             <p>We are dedicated to providing you with the best deals and services.</p>
-            <a href="#more-info"><button>Learn More</button></a>
+            <a href="#gal"><button>Places To Visit</button></a>
           </div>
         </section>
         <br>
   
   
-  <div class="gallery">
+  <div id="gal" class="gallery">
+    <div class="imgrow"><img src="https://holiday2go.netlify.app/Assets/Images/main_bg.jpg" width="600" height="400" alt=""></div>
+    <div class="imgrow"><img src="https://images.pexels.com/photos/434341/pexels-photo-434341.jpeg?cs=srgb&dl=pexels-mike-bird-434341.jpg&fm=jpg" width="600" height="400" alt=""></div>
     <div class="imgrow"><img src="https://img.freepik.com/premium-photo/india-taj-mahal-complex-beautiful-day-view_400112-330.jpg?w=2000" width="600" height="400" alt=""></div>
-    <div class="imgrow"><img src="https://img.freepik.com/premium-photo/india-taj-mahal-complex-beautiful-day-view_400112-330.jpg?w=2000" width="600" height="400" alt=""></div>
-    <div class="imgrow"><img src="https://img.freepik.com/premium-photo/india-taj-mahal-complex-beautiful-day-view_400112-330.jpg?w=2000" width="600" height="400" alt=""></div>
+    
   </div>
   
+  <div class="gallery">
+    <div class="imgrow"><img src="https://images.immediate.co.uk/production/volatile/sites/7/2021/09/GettyImages-1279734279-24aade8.jpg" width="600" height="400" alt=""></div>
+    
+  </div>
   
   <footer>
     <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
