removed some elements from 404

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   
   
   <div id="gal" class="gallery">
-    <div class="imgrow"><img src="https://holiday2go.netlify.app/Assets/Images/main_bg.jpg" width="600" height="400" alt=""></div>
+    <div class="imgrow"><img src="https://holiday2go.netlify.app/Assets/Images/main_bg.jpg" width="600" height="400" alt="">
+    
+    </div>
     <div class="imgrow"><img src="https://images.pexels.com/photos/434341/pexels-photo-434341.jpeg?cs=srgb&dl=pexels-mike-bird-434341.jpg&fm=jpg" width="600" height="400" alt=""></div>
     
   </div>
