made reset button

--- a/bookings.html
+++ b/bookings.html
@@ -55,6 +55,8 @@
         <input type="date" required>
         
         <input type="submit">
+        <br><br>
+        <input type="reset">
 
       </form>
     </div>
