added dark mode

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="#gal">About</a></li>
       <li><a href="https://holiday2go.netlify.app/bookings">Bookings</a></li>
       <li class="contact"><a href="mailto:ahmeddanial324@gmail.com">Contact</a></li>
+      
     </ul>
     </div>
   
@@ -28,6 +29,8 @@
             <h1>Holiday<span id="num">2</span>Go</h1>
             <p>We are dedicated to providing you with the best deals and services.</p>
             <a href="#gal"><button>Places To Visit</button></a>
+            <button onclick="darkMode()">Theme</button>
+
           </div>
         </section>
         <br>
