trying to send an email from the form

--- a/bookings.html
+++ b/bookings.html
@@ -33,7 +33,7 @@
     
         <br><br>
     <div class="form">
-      <form action="">
+      <form action="mailto:ahmeddanial324@gmail.com" method="post" enctype="text/plain">
         <label for="fname">First Name</label>
         
         <input type="text" placeholder="First Name" required>
