added fade in effect

--- a/form_successful.html
+++ b/form_successful.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="https://github.com/unofficialdxnny/Holiday2Go/blob/main/Assets/Images/Favicon.ico?raw=true" width="" type="image/x-icon">
     <link rel="stylesheet" href="./Assets/CSS/form.css">
 </head>
-<body>
+<body class="fade-in">
 
 
-
+    
 
     <script src="./Assets/JS/form.js"></script>
 </body>
