--- a/form_successful.html
+++ b/form_successful.html
@@ -10,7 +10,7 @@
 <body class="fade-in">
 
 
-    
+    <img src="https://holiday2go.netlify.app/Assets/Images/f8ae340c9da0cccc1dddd4026bf33e67.png"
 
     <script src="./Assets/JS/form.js"></script>
 </body>
