--- a/gen.html
+++ b/gen.html
@@ -10,7 +10,16 @@
 <body class="fade-in">
 
 
-    <img src="https://holiday2go.netlify.app/Assets/Images/f8ae340c9da0cccc1dddd4026bf33e67.png"
+
+    <section class="main">
+        <div class="main-content">
+
+          <h1>Holiday<span id="num">2</span>Go</h1>
+          <p>The Form has been submitted successfully. <br>We are generating your E-Ticket</p>
+
+        </div>
+      </section>
+      <br>
 
     <script src="./Assets/JS/form.js"></script>
 </body>
