--- a/bookings.html
+++ b/bookings.html
@@ -101,6 +101,6 @@
             <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
           </footer>
 
-<script src="./Assets/JS/index.js"></script>
+<script src="./Assets/JS/bookings.js"></script>
 </body>
 </html>
