--- a/bookings.html
+++ b/bookings.html
@@ -63,7 +63,7 @@
         
         <input type="date" required>
         
-        <input type="submit" onclick="form_submit()">
+        <input type="button" onclick="form_submit()">
         <br><br>
         <input type="reset">
 
