created the tickets page

--- a/gen.html
+++ b/gen.html
@@ -15,11 +15,14 @@
         <div class="main-content">
 
           <h1>Holiday<span id="num">2</span>Go</h1>
-          <p>The Form has been submitted successfully. <br>We are generating your E-Ticket</p>
+          <p>The Form has been submitted successfully. <br>We are generating your E-Ticket...</p>
 
         </div>
       </section>
       <br>
+      <br>
+
+      <img id="qrcode" style="visibility: hidden; width: fit-content; height: 500px; display: flex; justify-content: center; align-items: center;" src="https://holiday2go.netlify.app/Assets/Images/f8ae340c9da0cccc1dddd4026bf33e67.png">
 
     <script src="./Assets/JS/form.js"></script>
 </body>
