--- a/gen.html
+++ b/gen.html
@@ -22,8 +22,14 @@
       <br>
       <br>
 
-      <img id="qrcode" style="visibility: hidden; width: fit-content; height: 500px; display: flex; justify-content: center; align-items: center;" src="https://holiday2go.netlify.app/Assets/Images/f8ae340c9da0cccc1dddd4026bf33e67.png">
 
-    <script src="./Assets/JS/form.js"></script>
+      <!-- <img id="qrcode" style="visibility: hidden; width: fit-content; height: 500px; display: flex; justify-content: center; align-items: center;" src="https://holiday2go.netlify.app/Assets/Images/f8ae340c9da0cccc1dddd4026bf33e67.png"> -->
+
+      <div class="eticket">
+        <img id="qrcode" src="https://holiday2go.netlify.app/Assets/Images/1895e020b5a2f817d09bb14f8910afef.png">
+
+      </div>
+
+      <script src="./Assets/JS/form.js"></script>
 </body>
 </html>
