added logic for tickets

--- a/gen.html
+++ b/gen.html
@@ -30,7 +30,7 @@
       <p id="destination"></p>
       <div class="eticket">
     
-        <img id="qrcode" src="https://holiday2go.netlify.app/Assets/Images/1895e020b5a2f817d09bb14f8910afef.png">
+        <img id="qrcode">
         
       </div>
 
