fixed value of dropdown

--- a/bookings.html
+++ b/bookings.html
@@ -53,7 +53,7 @@
 
           <option value="London">London</option>
           <option value="France">France</option>
-          <option value="France">Belgium</option>
+          <option value="Belgium">Belgium</option>
         </select>
         
         <label for="date">Date</label>
