fixed auto scroll on click

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <br>
   
   
-        <div class="gallery">
+        <div id="gal" class="gallery">
           <div class="imgrow"><img src="https://holiday2go.netlify.app/Assets/Images/main_bg.jpg" alt=""></div>
           <div class="imgrow"><img src="https://images.pexels.com/photos/434341/pexels-photo-434341.jpeg?cs=srgb&dl=pexels-mike-bird-434341.jpg&fm=jpg" alt=""></div>
         </div>
