added a preloader for each page

--- a/bookings.html
+++ b/bookings.html
@@ -9,6 +9,10 @@
 </head>
 <body id="dragless" class="fade-in">
     
+  <div id="preloader">
+    <div id="loader"></div>
+</div>
+<div id="content">
 
     <div id="main">
 
@@ -98,6 +102,8 @@
             <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
           </footer>
 
+
+</div>
 <script src="./Assets/JS/bookings.js"></script>
 </body>
 </html>
