--- a/gen.html
+++ b/gen.html
@@ -9,7 +9,10 @@
 </head>
 <body class="fade-in">
 
-
+  <div id="preloader">
+    <div id="loader"></div>
+</div>
+<div id="content">
 
   
     <section class="main">
@@ -35,6 +38,7 @@
         
       </div>
 
+      </div>
       <script src="./Assets/JS/form.js"></script>
 </body>
 </html>
