--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body id="dragless" class="fade-in">
 
+  <div id="preloader">
+    <div id="loader"></div>
+</div>
+
+
+<div id="content">
+
   <div id="main">
     <ul>
       <li><a class="active" href="https://holiday2go.netlify.app">Home</a></li>
@@ -52,7 +59,7 @@
     <p>&copy; 2023 <a href="#main">Holiday<span id="num">2</span>Go</a> All rights reserved.</p>
   </footer>
   
-  
+  </div>
   
   
   <script src="./Assets/JS/index.js"></script>
