--- a/gen.html
+++ b/gen.html
@@ -50,17 +50,19 @@
       </div>
 
 
-      <!-- <py-script>
-        def send_simple_message():
+      <py-script>
+          def send_simple_message():
+          return requests.post(
+            "https://api.mailgun.net/v3/sandbox7c2ad1b969264dc09b0cc12668ef1061.mailgun.org/messages",
+            auth=("api", "cd8dcbb673059c080117e0e9a0c3cc06-6d8d428c-8d077eaf"),
+            data={"from": "Mailgun Sandbox <postmaster@sandbox7c2ad1b969264dc09b0cc12668ef1061.mailgun.org>",
+              "to": "Danial Ahmed <ahmeddanial973@gmail.com>",
+              "subject": "Hello Danial Ahmed",
+              "text": "Congratulations Danial Ahmed, you just sent an email with Mailgun!  You are truly awesome!"})
+      </py-script>
 
-	return requests.post(
-		"https://api.mailgun.net/v3/sandboxed3da58e5fab401cb839cd13200aab0e.mailgun.org/messages",
-		auth=("api", "23987d9551a9184304ab5ac44907335c-6d8d428c-99374baa"),
-		data={"from": "Mailgun Sandbox <postmaster@sandboxed3da58e5fab401cb839cd13200aab0e.mailgun.org>",
-			"to": "Danial Ahmed <ahmeddanial324@gmail.com>",
-			"subject": "Hello Danial Ahmed",
-			"text": "Congratulations Danial Ahmed, you just sent an email with Mailgun!  You are truly awesome!"})
-      </py-script> -->
+
+
       <script defer src="https://pyscript.net/latest/pyscript.js"></script>
       <script src="./Assets/JS/form.js"></script>
 </body>
