email system not working

--- a/gen.html
+++ b/gen.html
@@ -50,7 +50,7 @@
       </div>
 
 
-      <py-script>
+      <!-- <py-script>
           def send_simple_message():
           return requests.post(
             "https://api.mailgun.net/v3/sandbox7c2ad1b969264dc09b0cc12668ef1061.mailgun.org/messages",
@@ -59,10 +59,10 @@
               "to": "Danial Ahmed <ahmeddanial973@gmail.com>",
               "subject": "Hello Danial Ahmed",
               "text": "Congratulations Danial Ahmed, you just sent an email with Mailgun!  You are truly awesome!"})
-      </py-script>
+      </py-script> -->
 
 
-
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
       <script defer src="https://pyscript.net/latest/pyscript.js"></script>
       <script src="./Assets/JS/form.js"></script>
 </body>
