places visited today

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           </div>
         </section>
         <br>
+
+        <h1>Top Places Visited Today</h1>
   
   
         <div id="gal" class="gallery">
